--- a/.travis.yml
+++ b/.travis.yml
@@ -20,11 +20,9 @@ before_deploy:
   - chmod +x ./build.sh
   - ./build.sh -r b
 deploy:
-  provider: releases
-  api_key: $GITHUB_TOKEN
-  file_glob: true
-  file: release/*
-  draft: true
+  provider: pages
   skip_cleanup: true
+  github_token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
+  keep_history: true
   on:
-    tags: true
+    branch: main
